--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+linz-postgresql-functions (1.0.0-3linz~focal1) focal; urgency=medium
+
+  * Package rebuild for focal
+
+ -- Bill <bill@bill-VirtualBox>  Tue, 26 Apr 2022 16:11:11 +1200
+
+linz-postgresql-functions (1.0.0-3linz~focal1) focal; urgency=medium
+
+  * Packaging for Ubuntu Focal
+
+ -- Bill Nelson <bmnelson@linz.govt.nz>  Tue, 26 Apr 2022 10:15:00 +0200
+
 linz-postgresql-functions (1.0.0-2linz~trusty1) trusty; urgency=medium
 
   * Adding support for multiple PostgreSQL and PostGIS versions
